# pyiron_rdm

./: .coveragerc  .gitattributes  LICENSE  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-notebooks.yml  environment.yml  exclude  lower-bounds.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: push-pull.yml
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: atomistics_general.ipynb  atomistics_lammps_md_and_min.ipynb  atomistics_murn.ipynb  example.ipynb
ob/: OpenbisAixTended.py  classic.py  concept_dict.py  ob_OT_bam.py  ob_OT_sfb1394.py  ob_cfg_bam.py  ob_cfg_sfb1394.py  ob_upload.py  openbis.py  openbis_bam.py  openbis_sfb1394.py
pybis_aixtended/: OpenbisAixTended.py
pyiron_rdm/: OpenbisAixTended.py  _version.py  classic.py  concept_dict.py  ob_OT_bam.py  ob_OT_sfb1394.py  ob_cfg_bam.py  ob_cfg_sfb1394.py  ob_upload.py  sfb_to_bam.py  tools.py
tests/integration/: test_integration.py
tests/static/: lammps_concept_dict.json  lammps_flattened_dict.json  lammps_props_dict_sfb.json
tests/unit/: test_concept_dict.py  test_ob_OT.py  test_ob_cfg.py  test_tests.py
