[build-system]
requires = [
    "numpy",
    "setuptools>=68.0.0",
    "versioneer[toml]==0.29",

]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_rdm"
description = "pyiron_rdm - Your pyiron-like module."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pyiron_base==0.15.5",
    "pybis==1.37.4",
    "xxhash==3.6.0",
    "boto3==1.35.99"
]

dynamic = [ "version",]
authors = [
    { name = "Niklas Siemer", email = "siemer@mpi-susmat.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://pyiron_rdm.readthedocs.io"
Repository = "https://github.com/pyiron/pyiron_rdm"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_rdm/_version.py"
parentdir_prefix = "pyiron_rdm"
tag_prefix = "pyiron_rdm-"

[tool.setuptools.packages.find]
include = [ "pyiron_rdm*","pybis_aixtended*"]

[tool.setuptools.dynamic.version]
attr = "pyiron_rdm.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    #"E",
    # Pyflakes
    #"F",
    # pyupgrade
    #"UP",
    # flake8-bugbear
    #"B",
    # flake8-simplify
    #"SIM",
    # isort
    #"I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
  | ^/pybis_aixtended
)
'''
